apply plugin: 'java-library'
apply plugin: 'idea'

idea.project {
    jdkName = '11'
    languageLevel = JavaVersion.VERSION_11
    targetBytecodeVersion = JavaVersion.VERSION_11
    vcs = 'Git'
}

allprojects {

    apply plugin: 'idea'

    group 'net.sourceforge.jaadec'
    version '0.8.6'

    plugins.withType(JavaPlugin) {
        
        sourceCompatibility = 11

        idea {
            module {
                outputDir file('build/idea/main')
                testOutputDir file('build/idea/test')
            }
        }

        jar {
            archiveBaseName = project.name
            manifest {
                attributes 'Manifest-Version': '1.0'
                attributes 'Implementation-Version': archiveVersion
            }
        }

    }
    
    repositories {
        mavenCentral()
    }
}

dependencies {
    implementation (project(':aac'))
    implementation (project(':mp4'))
}
